<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="415dp"
        android:layout_height="723dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- can add padding ect here-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="386dp"
            android:layout_height="420dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="112dp"
            android:background="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="9dp"
            android:background="@color/colorPrimary"
            android:onClick="goToMoodFor"
            android:text="@string/moodFor"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/button"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="22dp"
            android:layout_toEndOf="@+id/button"
            android:background="@color/title"
            android:onClick="getFavorites"
            android:text="@string/favs"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="213dp"
            android:layout_height="33dp"
            android:layout_below="@+id/button"
            android:layout_alignLeft="@id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="-15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="168dp" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="399dp"
            android:layout_height="42dp"
            android:layout_above="@id/recycler_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="13dp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/_name"
            android:textAlignment="textStart"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="79dp"
            android:layout_height="37dp"
            android:layout_above="@+id/recycler_view"
            android:layout_below="@+id/button2"
            android:layout_alignBaseline="@id/search_view"
            android:layout_alignLeft="@id/button2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="-16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="89dp"
            android:layout_marginRight="89dp"
            android:layout_marginBottom="66dp"
            android:layout_toEndOf="@+id/search_view"
            android:background="@color/colorAccent"
            android:onClick="searchRestaurants"
            android:text="@string/Search"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/clear_search"
            android:layout_width="60dp"
            android:layout_height="37dp"
            android:layout_alignTop="@+id/search_button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="22dp"
            android:background="@color/colorAccent"
            android:onClick="clearSearch"
            android:text="@string/clear_search"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <!--other things we want to add must go here in their own textview-->
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>